BISERVER-6147 - Data Source Wizard - UI size/alignment issues with file name / import button

--- a/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/onyx/mainStyles.css
+++ b/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/onyx/mainStyles.css
@@ -94,6 +94,7 @@ input[type='text'] {
 .IE .pentaho-button {
   height: 30px;
   background: url('images/bg_btn.png') repeat-x;
+  background-position: center center;
 }
 
 /* Applies the green glow to buttons */
